<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tech.kayys.gamelan</groupId>
    <artifactId>gamelan-parent</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <name>Gamelan Workflow Engine</name>
    <description>Enterprise-grade workflow engine for agentic AI and business automation</description>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/bhangun/gamelan</url>
        </repository>
        <snapshotRepository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/bhangun/gamelan</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <lombok.version>1.18.42</lombok.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <compiler-plugin.version>3.13.0</compiler-plugin.version>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.version>3.32.2</quarkus.platform.version>
        <asm.version>9.9</asm.version>
        <grpc.version>1.60.0</grpc.version>
        <protobuf.version>3.25.5</protobuf.version>
        <testcontainers.version>1.19.3</testcontainers.version>
    </properties>

    <modules>
        <module>core</module>
        <module>sdk</module>
    </modules>

    <profiles>
        <profile>
            <id>core</id>
        </profile>

        <profile>
            <id>all</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>protocol/gamelan-protocol-grpc</module>
                <module>protocol/gamelan-protocol-kafka</module>
                <module>runtime/gamelan-runtime-distributed</module>
                <module>runtime/gamelan-runtime-standalone</module>
                <module>plugins</module>
                <module>extensions/gamelan-dag</module>
                <module>examples/gamelan-test-client</module>
                <module>examples/gamelan-test-executor</module>
                <module>examples/gamelan-test-standalone</module>
                <module>examples/gamelan-plugin-example</module>
                <module>examples/plugin-system-test</module>
            </modules>
        </profile>

        <profile>
            <id>protocols</id>
            <modules>
                <module>protocol/gamelan-protocol-grpc</module>
                <module>protocol/gamelan-protocol-kafka</module>
            </modules>
        </profile>

        <profile>
            <id>runtimes</id>
            <modules>
                <module>protocol/gamelan-protocol-grpc</module>
                <module>protocol/gamelan-protocol-kafka</module>
                <module>runtime/gamelan-runtime-distributed</module>
                <module>runtime/gamelan-runtime-standalone</module>
            </modules>
        </profile>

        <profile>
            <id>plugins</id>
            <modules>
                <module>plugins</module>
            </modules>
        </profile>

        <profile>
            <id>extensions</id>
            <modules>
                <module>extensions/gamelan-dag</module>
            </modules>
        </profile>

        <profile>
            <id>server</id>
            <modules>
                <module>protocol/gamelan-protocol-grpc</module>
                <module>protocol/gamelan-protocol-kafka</module>
            </modules>
        </profile>

        <profile>
            <id>executor</id>
            <modules>
                <module>protocol/gamelan-protocol-grpc</module>
            </modules>
        </profile>

        <profile>
            <id>client</id>
            <modules>
                <module>protocol/gamelan-protocol-grpc</module>
            </modules>
        </profile>

        <profile>
            <id>examples</id>
            <modules>
                <module>examples/gamelan-test-client</module>
                <module>examples/gamelan-test-executor</module>
                <module>examples/gamelan-test-standalone</module>
                <module>examples/gamelan-plugin-example</module>
                <module>examples/plugin-system-test</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <!-- Quarkus BOM -->
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-commons</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-tree</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-util</artifactId>
                <version>${asm.version}</version>
            </dependency>

            <!-- gRPC -->
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy</artifactId>
                <version>1.17.5</version>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy-agent</artifactId>
                <version>1.17.5</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
